Fuzzython/store/FCLParser.py
# $ANTLR 3.5 C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g 2013-06-21 00:01:51

import sys

from antlr3 import *
# !/usr/bin/python3

from Fuzzython.adjective import Adjective
from Fuzzython.interval import Interval
from Fuzzython.operators._and import And
from Fuzzython.operators._not import Not
from Fuzzython.operators._or import Or
# from Fuzzython.norms.norms import maximum, minimum
from Fuzzython.predicate import Predicate
from Fuzzython.ruleblock import RuleBlock
from Fuzzython.rules.rule import Rule
from Fuzzython.variable import Variable


# region variables and functions...

# op_norms = { 'AND':minimum, 'OR':maximum }

def get_system(name, type_=None):
    """Get an instance of a system model
    :param name: system name
    :param type_: system type
    """
    if type_ == '_SUGENO_':
        from Fuzzython.systems.sugeno import SugenoSystem
        return SugenoSystem(name)
    elif type_ == '_TSUKAMOTO_':
        from Fuzzython.systems.tsukamoto import TsukamotoSystem
        return TsukamotoSystem(name)
    from Fuzzython.systems.mamdani import MamdaniSystem
    return MamdaniSystem(name)


def get_fset(name, params=None):
    """Get an instance of a FuzzySet with a given name and params
    :param name: name of fuzzy set class in package fsets
    :param params: parameters for fuzzy set
    """
    name_ = name.lower()
    module = __import__('fsets.' + name_, fromlist=(name,))
    class_ = module.__dict__[name]
    params = params or []
    fset = class_(*params)
    return fset


_oppairs = [('MIN', 'MAX'), ('PROD', 'ASUM'), ('BDIF', 'BSUM'), ('DPROD', 'DSUM'), ('EPROD', 'ESUM'), ('FAND', 'FOR')]


def check_op(operators):
    """Complete operators definition
    """
    and_, or_, not_ = operators
    if and_ and or_:
        return (and_, or_, not_ or 'ZADEH')
    ands = {x: y for x, y in _oppairs}
    if and_ in ands:  # {'MIN', 'PROD', 'BDIF'}:
        return (and_, ands.get(and_), not_ or 'ZADEH')
    ors = {y: x for x, y in _oppairs}
    if or_ in ors:  # {'MAX', 'ASUM', 'BSUM'}:
        return (ors.get(or_), or_, not_ or 'ZADEH')
    return (and_ or 'MIN', or_ or 'MAX', not_ or 'ZADEH')


# endregion




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF = -1
T__14 = 14
T__15 = 15
T__16 = 16
T__17 = 17
T__18 = 18
T__19 = 19
T__20 = 20
T__21 = 21
T__22 = 22
T__23 = 23
T__24 = 24
T__25 = 25
T__26 = 26
T__27 = 27
T__28 = 28
T__29 = 29
T__30 = 30
T__31 = 31
T__32 = 32
T__33 = 33
T__34 = 34
T__35 = 35
T__36 = 36
T__37 = 37
T__38 = 38
T__39 = 39
T__40 = 40
T__41 = 41
T__42 = 42
T__43 = 43
T__44 = 44
T__45 = 45
T__46 = 46
T__47 = 47
T__48 = 48
T__49 = 49
T__50 = 50
T__51 = 51
T__52 = 52
T__53 = 53
T__54 = 54
T__55 = 55
T__56 = 56
COMMENT = 4
DIGIT = 5
EXPONENT = 6
FLOAT = 7
IDENTIFIER = 8
INTEGRAL_LITERAL = 9
LETTER = 10
LETTER_ = 11
REAL_LITERAL = 12
WS = 13

# token names
tokenNamesMap = {
    0: "<invalid>", 1: "<EOR>", 2: "<DOWN>", 3: "<UP>",
    -1: "EOF", 14: "T__14", 15: "T__15", 16: "T__16", 17: "T__17", 18: "T__18",
    19: "T__19", 20: "T__20", 21: "T__21", 22: "T__22", 23: "T__23", 24: "T__24",
    25: "T__25", 26: "T__26", 27: "T__27", 28: "T__28", 29: "T__29", 30: "T__30",
    31: "T__31", 32: "T__32", 33: "T__33", 34: "T__34", 35: "T__35", 36: "T__36",
    37: "T__37", 38: "T__38", 39: "T__39", 40: "T__40", 41: "T__41", 42: "T__42",
    43: "T__43", 44: "T__44", 45: "T__45", 46: "T__46", 47: "T__47", 48: "T__48",
    49: "T__49", 50: "T__50", 51: "T__51", 52: "T__52", 53: "T__53", 54: "T__54",
    55: "T__55", 56: "T__56", 4: "COMMENT", 5: "DIGIT", 6: "EXPONENT", 7: "FLOAT",
    8: "IDENTIFIER", 9: "INTEGRAL_LITERAL", 10: "LETTER", 11: "LETTER_",
    12: "REAL_LITERAL", 13: "WS"
}
Token.registerTokenNamesMap(tokenNamesMap)

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "COMMENT", "DIGIT", "EXPONENT", "FLOAT", "IDENTIFIER", "INTEGRAL_LITERAL",
    "LETTER", "LETTER_", "REAL_LITERAL", "WS", "'('", "')'", "'*'", "'+'",
    "','", "'-'", "'.'", "'..'", "'/'", "':'", "';'", "'='", "'ACCU'", "'ACT'",
    "'AND'", "'DEFAULT'", "'DEFUZZIFY'", "'END_DEFUZZIFY'", "'END_FUNCTION_BLOCK'",
    "'END_FUZZIFY'", "'END_RULEBLOCK'", "'END_VAR'", "'FUNCTION_BLOCK'",
    "'FUZZIFY'", "'IF'", "'IS'", "'METHOD'", "'NC'", "'NOT'", "'OR'", "'RANGE'",
    "'REAL'", "'RETAIN'", "'RULE'", "'RULEBLOCK'", "'TERM'", "'THEN'", "'VAR_INPUT'",
    "'VAR_OUTPUT'", "'WITH'", "'_MAMDAMI_'", "'_SUGENO_'", "'_TSUKAMOTO_'"
]


class FCLParser(Parser):
    grammarFileName = "C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super().__init__(input, state, *args, **kwargs)

        self.system = None
        self.scope = {}

        self.delegates = []

    class function_block_type_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

    # $ANTLR start "function_block_type"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:86:1: function_block_type : ( '_MAMDAMI_' | '_SUGENO_' | '_TSUKAMOTO_' );
    def function_block_type(self, ):
        retval = self.function_block_type_return()
        retval.start = self.input.LT(1)

        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:87:2: ( '_MAMDAMI_' | '_SUGENO_' | '_TSUKAMOTO_' )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:
                pass
                if self.input.LA(1) in {54, 55, 56}:
                    self.input.consume()
                    self._state.errorRecovery = False


                else:
                    mse = MismatchedSetException(None, self.input)
                    raise mse

                retval.stop = self.input.LT(-1)



            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "function_block_type"



    # $ANTLR start "function_block_declaration"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:89:1: function_block_declaration : 'FUNCTION_BLOCK' ( function_block_type )? name= IDENTIFIER ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF ;
    def function_block_declaration(self, ):
        name = None
        function_block_type1 = None

        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:90:2: ( 'FUNCTION_BLOCK' ( function_block_type )? name= IDENTIFIER ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:90:4: 'FUNCTION_BLOCK' ( function_block_type )? name= IDENTIFIER ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF
                pass
                self.match(self.input, 36, self.FOLLOW_36_in_function_block_declaration66)

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:90:21: ( function_block_type )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if (LA1_0 in {54, 55, 56}):
                    alt1 = 1
                if alt1 == 1:
                    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:90:21: function_block_type
                    pass
                    self._state.following.append(self.FOLLOW_function_block_type_in_function_block_declaration68)
                    function_block_type1 = self.function_block_type()

                    self._state.following.pop()

                name = self.match(self.input, IDENTIFIER, self.FOLLOW_IDENTIFIER_in_function_block_declaration73)

                # action start
                self.system = get_system(name.text, ((function_block_type1 is not None) and [
                    self.input.toString(function_block_type1.start, function_block_type1.stop)] or [None])[0])
                # action end


                # action start
                self.type_ = ((function_block_type1 is not None) and [
                    self.input.toString(function_block_type1.start, function_block_type1.stop)] or [None])[0]
                # action end


                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:93:3: ( fb_io_var_declarations )*
                while True:  # loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 in {51, 52}):
                        alt2 = 1

                    if alt2 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:93:3: fb_io_var_declarations
                        pass
                        self._state.following.append(self.FOLLOW_fb_io_var_declarations_in_function_block_declaration85)
                        self.fb_io_var_declarations()

                        self._state.following.pop()


                    else:
                        break  # loop2

                self._state.following.append(self.FOLLOW_function_block_body_in_function_block_declaration99)
                self.function_block_body()

                self._state.following.pop()

                self.match(self.input, 32, self.FOLLOW_32_in_function_block_declaration106)

                self.match(self.input, EOF, self.FOLLOW_EOF_in_function_block_declaration122)




            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "function_block_declaration"

    # $ANTLR start "fb_io_var_declarations"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:102:1: fb_io_var_declarations : ( input_declarations | output_declarations );
    def fb_io_var_declarations(self, ):
        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:103:2: ( input_declarations | output_declarations )
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if (LA3_0 == 51):
                    alt3 = 1
                elif (LA3_0 == 52):
                    alt3 = 2
                else:
                    nvae = NoViableAltException("", 3, 0, self.input)

                    raise nvae

                if alt3 == 1:
                    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:103:4: input_declarations
                    pass
                    self._state.following.append(self.FOLLOW_input_declarations_in_fb_io_var_declarations142)
                    self.input_declarations()

                    self._state.following.pop()


                elif alt3 == 2:
                    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:104:3: output_declarations
                    pass
                    self._state.following.append(self.FOLLOW_output_declarations_in_fb_io_var_declarations147)
                    self.output_declarations()

                    self._state.following.pop()



            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "fb_io_var_declarations"

    # $ANTLR start "input_declarations"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:107:1: input_declarations : 'VAR_INPUT' ( variable_declaration )+ 'END_VAR' ;
    def input_declarations(self, ):
        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:108:2: ( 'VAR_INPUT' ( variable_declaration )+ 'END_VAR' )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:108:4: 'VAR_INPUT' ( variable_declaration )+ 'END_VAR'
                pass
                self.match(self.input, 51, self.FOLLOW_51_in_input_declarations159)

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:109:3: ( variable_declaration )+
                cnt4 = 0
                while True:  # loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == IDENTIFIER):
                        alt4 = 1

                    if alt4 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:109:3: variable_declaration
                        pass
                        self._state.following.append(self.FOLLOW_variable_declaration_in_input_declarations163)
                        self.variable_declaration()

                        self._state.following.pop()


                    else:
                        if cnt4 >= 1:
                            break  # loop4

                        eee = EarlyExitException(4, self.input)
                        raise eee

                    cnt4 += 1

                self.match(self.input, 35, self.FOLLOW_35_in_input_declarations168)




            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "input_declarations"

    # $ANTLR start "output_declarations"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:113:1: output_declarations : 'VAR_OUTPUT' ( 'RETAIN' )? ( variable_declaration )+ 'END_VAR' ;
    def output_declarations(self, ):
        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:114:2: ( 'VAR_OUTPUT' ( 'RETAIN' )? ( variable_declaration )+ 'END_VAR' )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:114:4: 'VAR_OUTPUT' ( 'RETAIN' )? ( variable_declaration )+ 'END_VAR'
                pass
                self.match(self.input, 52, self.FOLLOW_52_in_output_declarations180)

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:114:17: ( 'RETAIN' )?
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == 46):
                    alt5 = 1
                if alt5 == 1:
                    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:114:17: 'RETAIN'
                    pass
                    self.match(self.input, 46, self.FOLLOW_46_in_output_declarations182)

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:115:3: ( variable_declaration )+
                cnt6 = 0
                while True:  # loop6
                    alt6 = 2
                    LA6_0 = self.input.LA(1)

                    if (LA6_0 == IDENTIFIER):
                        alt6 = 1

                    if alt6 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:115:3: variable_declaration
                        pass
                        self._state.following.append(self.FOLLOW_variable_declaration_in_output_declarations187)
                        self.variable_declaration()

                        self._state.following.pop()


                    else:
                        if cnt6 >= 1:
                            break  # loop6

                        eee = EarlyExitException(6, self.input)
                        raise eee

                    cnt6 += 1

                self.match(self.input, 35, self.FOLLOW_35_in_output_declarations192)




            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "output_declarations"

    # $ANTLR start "variable_declaration"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:119:1: variable_declaration : name= IDENTIFIER ':' type ';' ;
    def variable_declaration(self, ):
        name = None

        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:120:2: (name= IDENTIFIER ':' type ';' )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:121:3: name= IDENTIFIER ':' type ';'
                pass
                name = self.match(self.input, IDENTIFIER, self.FOLLOW_IDENTIFIER_in_variable_declaration208)

                self.match(self.input, 23, self.FOLLOW_23_in_variable_declaration210)

                self._state.following.append(self.FOLLOW_type_in_variable_declaration212)
                self.type()

                self._state.following.pop()

                self.match(self.input, 24, self.FOLLOW_24_in_variable_declaration214)

                # action start
                self.scope[name.text] = Variable(name.text)
                # action end





            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "variable_declaration"

    # $ANTLR start "type"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:137:1: type : ( 'REAL' | IDENTIFIER );
    def type(self, ):
        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:137:6: ( 'REAL' | IDENTIFIER )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:
                pass
                if self.input.LA(1) in {IDENTIFIER, 45}:
                    self.input.consume()
                    self._state.errorRecovery = False


                else:
                    mse = MismatchedSetException(None, self.input)
                    raise mse






            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "type"

    # $ANTLR start "function_block_body"
    # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:148:1: function_block_body : ( fuzzify_block )* ( defuzzify_block )* (rb= rule_block )* ;
    def function_block_body(self, ):
        rb = None

        try:
            try:
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:149:2: ( ( fuzzify_block )* ( defuzzify_block )* (rb= rule_block )* )
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:149:4: ( fuzzify_block )* ( defuzzify_block )* (rb= rule_block )*
                pass
                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:149:4: ( fuzzify_block )*
                while True:  # loop7
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == 37):
                        alt7 = 1

                    if alt7 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:149:4: fuzzify_block
                        pass
                        self._state.following.append(self.FOLLOW_fuzzify_block_in_function_block_body250)
                        self.fuzzify_block()

                        self._state.following.pop()


                    else:
                        break  # loop7

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:150:3: ( defuzzify_block )*
                while True:  # loop8
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if (LA8_0 == 30):
                        alt8 = 1

                    if alt8 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:150:3: defuzzify_block
                        pass
                        self._state.following.append(self.FOLLOW_defuzzify_block_in_function_block_body255)
                        self.defuzzify_block()

                        self._state.following.pop()


                    else:
                        break  # loop8

                # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:151:3: (rb= rule_block )*
                while True:  # loop9
                    alt9 = 2
                    LA9_0 = self.input.LA(1)

                    if (LA9_0 == 48):
                        alt9 = 1

                    if alt9 == 1:
                        # C:\\Users\\CL\\PycharmProjects\\fuzzython\\store\\FCL.g:151:4: rb= rule_block
                        pass
                        self._state.following.append(self.FOLLOW_rule_block_in_function_block_body263)
                        rb = self.rule_block()

                        self._state.following.pop()

                        # action start
                        self.system.add_blocks(rb)
                        # action end



                    else:
                        break  # loop9





            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return

        # $ANTLR end "function_block_body"
